--- a/index.html
+++ b/index.html
@@ -22,3 +22,45 @@
     <p>Hier kannst du deine Teams einreichen und die aktuelle Tabelle einsehen!</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bundesliga Manager</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        .logo-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        img {
+            width: 150px; /* Passe die Größe des Logos an */
+            margin-right: 20px;
+        }
+        .title {
+            font-size: 2.5em;
+            color: #333;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="logo-container">
+        <img src="1.png" alt="Bundesliga Manager Logo">
+        <div class="title">Bundesliga Manager</div>
+    </div>
+    <p>Fairness. Spaß. Wettkampf.</p>
+</body>
+</html>
