--- a/index.html
+++ b/index.html
@@ -41,18 +41,24 @@
         }
         .logo-container {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             margin-bottom: 20px;
         }
         img {
-            width: 150px; /* Passe die Größe des Logos an */
-            margin-right: 20px;
+            width: 150px; /* Logo Größe */
+            margin-bottom: 10px;
         }
         .title {
             font-size: 2.5em;
             color: #333;
             font-weight: bold;
+        }
+        .subtitle {
+            font-size: 1.2em;
+            color: #555;
+            margin-top: -10px; /* Abstand zum Titel verringern */
         }
     </style>
 </head>
@@ -60,7 +66,8 @@
     <div class="logo-container">
         <img src="1.png" alt="Bundesliga Manager Logo">
         <div class="title">Bundesliga Manager</div>
+        <div class="subtitle">Fairness. Spaß. Wettkampf.</div>
     </div>
-    <p>Fairness. Spaß. Wettkampf.</p>
+    <p>Hier kannst du deine Teams einreichen und die aktuelle Tabelle einsehen!</p>
 </body>
 </html>
