--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .subtitle {
             font-size: 1.2em;
             color: #555;
-            margin-top: -10px; /* Abstand zum Titel verringern */
+            margin-top: 15px; /* Abstand zum Titel erhöht */
         }
     </style>
 </head>
