--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="subtitle">Fairness. Spaß. Wettkampf.</div>
     </div>
 
-    <h2>Aktuelle Tabelle</h2>
+    <h2>Die Tabelle</h2>
     <div class="table-container">
         <table>
             <thead>
@@ -124,5 +124,166 @@
         </table>
     </div>
 
+</body>
+</html>
+
+    <h2>Die Kader</h2>
+    <div class="kader-section">
+        <!-- Tabelle für Bent -->
+        <table class="kader-table">
+            <thead>
+                <tr>
+                    <th>Bent</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- 20 Zeilen für Spieler -->
+                <tr><td>1</td></tr>
+                <tr><td>2</td></tr>
+                <tr><td>3</td></tr>
+                <tr><td>4</td></tr>
+                <tr><td>5</td></tr>
+                <tr><td>6</td></tr>
+                <tr><td>7</td></tr>
+                <tr><td>8</td></tr>
+                <tr><td>9</td></tr>
+                <tr><td>10</td></tr>
+                <tr><td>11</td></tr>
+                <tr><td>12</td></tr>
+                <tr><td>13</td></tr>
+                <tr><td>14</td></tr>
+                <tr><td>15</td></tr>
+                <tr><td>16</td></tr>
+                <tr><td>17</td></tr>
+                <tr><td>18</td></tr>
+                <tr><td>19</td></tr>
+                <tr><td>20</td></tr>
+            </tbody>
+        </table>
+
+        <!-- Tabelle für Leon I. -->
+        <table class="kader-table">
+            <thead>
+                <tr>
+                    <th>Leon I.</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td></tr>
+                <tr><td>2</td></tr>
+                <tr><td>3</td></tr>
+                <tr><td>4</td></tr>
+                <tr><td>5</td></tr>
+                <tr><td>6</td></tr>
+                <tr><td>7</td></tr>
+                <tr><td>8</td></tr>
+                <tr><td>9</td></tr>
+                <tr><td>10</td></tr>
+                <tr><td>11</td></tr>
+                <tr><td>12</td></tr>
+                <tr><td>13</td></tr>
+                <tr><td>14</td></tr>
+                <tr><td>15</td></tr>
+                <tr><td>16</td></tr>
+                <tr><td>17</td></tr>
+                <tr><td>18</td></tr>
+                <tr><td>19</td></tr>
+                <tr><td>20</td></tr>
+            </tbody>
+        </table>
+
+        <!-- Tabelle für Leon B. -->
+        <table class="kader-table">
+            <thead>
+                <tr>
+                    <th>Leon B.</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td></tr>
+                <tr><td>2</td></tr>
+                <tr><td>3</td></tr>
+                <tr><td>4</td></tr>
+                <tr><td>5</td></tr>
+                <tr><td>6</td></tr>
+                <tr><td>7</td></tr>
+                <tr><td>8</td></tr>
+                <tr><td>9</td></tr>
+                <tr><td>10</td></tr>
+                <tr><td>11</td></tr>
+                <tr><td>12</td></tr>
+                <tr><td>13</td></tr>
+                <tr><td>14</td></tr>
+                <tr><td>15</td></tr>
+                <tr><td>16</td></tr>
+                <tr><td>17</td></tr>
+                <tr><td>18</td></tr>
+                <tr><td>19</td></tr>
+                <tr><td>20</td></tr>
+            </tbody>
+        </table>
+
+        <!-- Tabelle für Moritz -->
+        <table class="kader-table">
+            <thead>
+                <tr>
+                    <th>Moritz</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td></tr>
+                <tr><td>2</td></tr>
+                <tr><td>3</td></tr>
+                <tr><td>4</td></tr>
+                <tr><td>5</td></tr>
+                <tr><td>6</td></tr>
+                <tr><td>7</td></tr>
+                <tr><td>8</td></tr>
+                <tr><td>9</td></tr>
+                <tr><td>10</td></tr>
+                <tr><td>11</td></tr>
+                <tr><td>12</td></tr>
+                <tr><td>13</td></tr>
+                <tr><td>14</td></tr>
+                <tr><td>15</td></tr>
+                <tr><td>16</td></tr>
+                <tr><td>17</td></tr>
+                <tr><td>18</td></tr>
+                <tr><td>19</td></tr>
+                <tr><td>20</td></tr>
+            </tbody>
+        </table>
+
+        <!-- Tabelle für Jonas -->
+        <table class="kader-table">
+            <thead>
+                <tr>
+                    <th>Jonas</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>1</td></tr>
+                <tr><td>2</td></tr>
+                <tr><td>3</td></tr>
+                <tr><td>4</td></tr>
+                <tr><td>5</td></tr>
+                <tr><td>6</td></tr>
+                <tr><td>7</td></tr>
+                <tr><td>8</td></tr>
+                <tr><td>9</td></tr>
+                <tr><td>10</td></tr>
+                <tr><td>11</td></tr>
+                <tr><td>12</td></tr>
+                <tr><td>13</td></tr>
+                <tr><td>14</td></tr>
+                <tr><td>15</td></tr>
+                <tr><td>16</td></tr>
+                <tr><td>17</td></tr>
+                <tr><td>18</td></tr>
+                <tr><td>19</td></tr>
+                <tr><td>20</td></tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
