--- a/index.html
+++ b/index.html
@@ -127,163 +127,178 @@
 </body>
 </html>
 
-    <h2>Die Kader</h2>
-    <div class="kader-section">
-        <!-- Tabelle für Bent -->
-        <table class="kader-table">
-            <thead>
-                <tr>
-                    <th>Bent</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- 20 Zeilen für Spieler -->
-                <tr><td>1</td></tr>
-                <tr><td>2</td></tr>
-                <tr><td>3</td></tr>
-                <tr><td>4</td></tr>
-                <tr><td>5</td></tr>
-                <tr><td>6</td></tr>
-                <tr><td>7</td></tr>
-                <tr><td>8</td></tr>
-                <tr><td>9</td></tr>
-                <tr><td>10</td></tr>
-                <tr><td>11</td></tr>
-                <tr><td>12</td></tr>
-                <tr><td>13</td></tr>
-                <tr><td>14</td></tr>
-                <tr><td>15</td></tr>
-                <tr><td>16</td></tr>
-                <tr><td>17</td></tr>
-                <tr><td>18</td></tr>
-                <tr><td>19</td></tr>
-                <tr><td>20</td></tr>
-            </tbody>
-        </table>
+   <h2>Die Kader</h2>
+<div class="kader-section">
+    <!-- Tabelle für Bent -->
+    <table class="kader-table">
+        <thead>
+            <tr>
+                <th>Bent</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- 20 Zeilen für Spieler -->
+            <tr><td>1. </td></tr>
+            <tr><td>2. </td></tr>
+            <tr><td>3. </td></tr>
+            <tr><td>4. </td></tr>
+            <tr><td>5. </td></tr>
+            <tr><td>6. </td></tr>
+            <tr><td>7. </td></tr>
+            <tr><td>8. </td></tr>
+            <tr><td>9. </td></tr>
+            <tr><td>10. </td></tr>
+            <tr><td>11. </td></tr>
+            <tr><td>12. </td></tr>
+            <tr><td>13. </td></tr>
+            <tr><td>14. </td></tr>
+            <tr><td>15. </td></tr>
+            <tr><td>16. </td></tr>
+            <tr><td>17. </td></tr>
+            <tr><td>18. </td></tr>
+            <tr><td>19. </td></tr>
+            <tr><td>20. </td></tr>
+        </tbody>
+    </table>
 
-        <!-- Tabelle für Leon I. -->
-        <table class="kader-table">
-            <thead>
-                <tr>
-                    <th>Leon I.</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>1</td></tr>
-                <tr><td>2</td></tr>
-                <tr><td>3</td></tr>
-                <tr><td>4</td></tr>
-                <tr><td>5</td></tr>
-                <tr><td>6</td></tr>
-                <tr><td>7</td></tr>
-                <tr><td>8</td></tr>
-                <tr><td>9</td></tr>
-                <tr><td>10</td></tr>
-                <tr><td>11</td></tr>
-                <tr><td>12</td></tr>
-                <tr><td>13</td></tr>
-                <tr><td>14</td></tr>
-                <tr><td>15</td></tr>
-                <tr><td>16</td></tr>
-                <tr><td>17</td></tr>
-                <tr><td>18</td></tr>
-                <tr><td>19</td></tr>
-                <tr><td>20</td></tr>
-            </tbody>
-        </table>
+    <!-- Tabelle für Leon I. -->
+    <table class="kader-table">
+        <thead>
+            <tr>
+                <th>Leon I.</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>1. </td></tr>
+            <tr><td>2. </td></tr>
+            <tr><td>3. </td></tr>
+            <tr><td>4. </td></tr>
+            <tr><td>5. </td></tr>
+            <tr><td>6. </td></tr>
+            <tr><td>7. </td></tr>
+            <tr><td>8. </td></tr>
+            <tr><td>9. </td></tr>
+            <tr><td>10. </td></tr>
+            <tr><td>11. </td></tr>
+            <tr><td>12. </td></tr>
+            <tr><td>13. </td></tr>
+            <tr><td>14. </td></tr>
+            <tr><td>15. </td></tr>
+            <tr><td>16. </td></tr>
+            <tr><td>17. </td></tr>
+            <tr><td>18. </td></tr>
+            <tr><td>19. </td></tr>
+            <tr><td>20. </td></tr>
+        </tbody>
+    </table>
 
-        <!-- Tabelle für Leon B. -->
-        <table class="kader-table">
-            <thead>
-                <tr>
-                    <th>Leon B.</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>1</td></tr>
-                <tr><td>2</td></tr>
-                <tr><td>3</td></tr>
-                <tr><td>4</td></tr>
-                <tr><td>5</td></tr>
-                <tr><td>6</td></tr>
-                <tr><td>7</td></tr>
-                <tr><td>8</td></tr>
-                <tr><td>9</td></tr>
-                <tr><td>10</td></tr>
-                <tr><td>11</td></tr>
-                <tr><td>12</td></tr>
-                <tr><td>13</td></tr>
-                <tr><td>14</td></tr>
-                <tr><td>15</td></tr>
-                <tr><td>16</td></tr>
-                <tr><td>17</td></tr>
-                <tr><td>18</td></tr>
-                <tr><td>19</td></tr>
-                <tr><td>20</td></tr>
-            </tbody>
-        </table>
+    <!-- Tabelle für Leon B. -->
+    <table class="kader-table">
+        <thead>
+            <tr>
+                <th>Leon B.</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>1. </td></tr>
+            <tr><td>2. </td></tr>
+            <tr><td>3. </td></tr>
+            <tr><td>4. </td></tr>
+            <tr><td>5. </td></tr>
+            <tr><td>6. </td></tr>
+            <tr><td>7. </td></tr>
+            <tr><td>8. </td></tr>
+            <tr><td>9. </td></tr>
+            <tr><td>10. </td></tr>
+            <tr><td>11. </td></tr>
+            <tr><td>12. </td></tr>
+            <tr><td>13. </td></tr>
+            <tr><td>14. </td></tr>
+            <tr><td>15. </td></tr>
+            <tr><td>16. </td></tr>
+            <tr><td>17. </td></tr>
+            <tr><td>18. </td></tr>
+            <tr><td>19. </td></tr>
+            <tr><td>20. </td></tr>
+        </tbody>
+    </table>
 
-        <!-- Tabelle für Moritz -->
-        <table class="kader-table">
-            <thead>
-                <tr>
-                    <th>Moritz</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>1</td></tr>
-                <tr><td>2</td></tr>
-                <tr><td>3</td></tr>
-                <tr><td>4</td></tr>
-                <tr><td>5</td></tr>
-                <tr><td>6</td></tr>
-                <tr><td>7</td></tr>
-                <tr><td>8</td></tr>
-                <tr><td>9</td></tr>
-                <tr><td>10</td></tr>
-                <tr><td>11</td></tr>
-                <tr><td>12</td></tr>
-                <tr><td>13</td></tr>
-                <tr><td>14</td></tr>
-                <tr><td>15</td></tr>
-                <tr><td>16</td></tr>
-                <tr><td>17</td></tr>
-                <tr><td>18</td></tr>
-                <tr><td>19</td></tr>
-                <tr><td>20</td></tr>
-            </tbody>
-        </table>
+    <!-- Tabelle für Moritz -->
+    <table class="kader-table">
+        <thead>
+            <tr>
+                <th>Moritz</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>1. </td></tr>
+            <tr><td>2. </td></tr>
+            <tr><td>3. </td></tr>
+            <tr><td>4. </td></tr>
+            <tr><td>5. </td></tr>
+            <tr><td>6. </td></tr>
+            <tr><td>7. </td></tr>
+            <tr><td>8. </td></tr>
+            <tr><td>9. </td></tr>
+            <tr><td>10. </td></tr>
+            <tr><td>11. </td></tr>
+            <tr><td>12. </td></tr>
+            <tr><td>13. </td></tr>
+            <tr><td>14. </td></tr>
+            <tr><td>15. </td></tr>
+            <tr><td>16. </td></tr>
+            <tr><td>17. </td></tr>
+            <tr><td>18. </td></tr>
+            <tr><td>19. </td></tr>
+            <tr><td>20. </td></tr>
+        </tbody>
+    </table>
 
-        <!-- Tabelle für Jonas -->
-        <table class="kader-table">
-            <thead>
-                <tr>
-                    <th>Jonas</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>1</td></tr>
-                <tr><td>2</td></tr>
-                <tr><td>3</td></tr>
-                <tr><td>4</td></tr>
-                <tr><td>5</td></tr>
-                <tr><td>6</td></tr>
-                <tr><td>7</td></tr>
-                <tr><td>8</td></tr>
-                <tr><td>9</td></tr>
-                <tr><td>10</td></tr>
-                <tr><td>11</td></tr>
-                <tr><td>12</td></tr>
-                <tr><td>13</td></tr>
-                <tr><td>14</td></tr>
-                <tr><td>15</td></tr>
-                <tr><td>16</td></tr>
-                <tr><td>17</td></tr>
-                <tr><td>18</td></tr>
-                <tr><td>19</td></tr>
-                <tr><td>20</td></tr>
-            </tbody>
-        </table>
-    </div>
-</body>
-</html>
+    <!-- Tabelle für Jonas -->
+    <table class="kader-table">
+        <thead>
+            <tr>
+                <th>Jonas</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>1. </td></tr>
+            <tr><td>2. </td></tr>
+            <tr><td>3. </td></tr>
+            <tr><td>4. </td></tr>
+            <tr><td>5. </td></tr>
+            <tr><td>6. </td></tr>
+            <tr><td>7. </td></tr>
+            <tr><td>8. </td></tr>
+            <tr><td>9. </td></tr>
+            <tr><td>10. </td></tr>
+            <tr><td>11. </td></tr>
+            <tr><td>12. </td></tr>
+            <tr><td>13. </td></tr>
+            <tr><td>14. </td></tr>
+            <tr><td>15. </td></tr>
+            <tr><td>16. </td></tr>
+            <tr><td>17. </td></tr>
+            <tr><td>18. </td></tr>
+            <tr><td>19. </td></tr>
+            <tr><td>20. </td></tr>
+        </tbody>
+    </table>
+</div>
+
+<style>
+    .kader-section {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .kader-table {
+        width: 120px; /* oder eine andere Breite, die passt */
+        margin: 10px;
+        border-collapse: collapse;
+    }
+    .kader-table th, .kader-table td {
+        text-align: left; /* Text linksbündig */
+        padding: 5px;
+        border: 1px solid #ddd;
+    }
+</style>
