--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </body>
 </html>
 
-   <h2>Die Kader</h2>
+<h2>Die Kader</h2>
 <div class="kader-section">
     <!-- Tabelle für Bent -->
     <table class="kader-table">
@@ -290,6 +290,7 @@
     .kader-section {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center; /* Zentriert die Tabellen */
     }
     .kader-table {
         width: 120px; /* oder eine andere Breite, die passt */
