--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
                     <th>Gegentore</th>
                     <th>11 des Tages</th>
                     <th>Assists</th>
+                    <th>Gesamt</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>Bent</td>
+                    <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -92,10 +94,12 @@
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
+                    <td>0</td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>Leon B.</td>
+                    <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
@@ -110,10 +114,12 @@
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
+                    <td>0</td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>Jonas</td>
+                    <td>0</td>
                     <td>0</td>
                     <td>0</td>
                     <td>0</td>
