--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -3,15 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Die Spieltagskader</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Dein Stylesheet hier einfügen -->
+    <title>Bundesliga Manager</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        .logo-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .table-container {
+            margin: 40px auto;
+            width: 80%;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ccc;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #f1f1f1;
+        }
+        .title {
+            font-size: 2.5em;
+            color: #333;
+            font-weight: bold;
+        }
+        .subtitle {
+            font-size: 1.2em;
+            color: #555;
+            margin-top: 15px;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <img src="dein-logo.png" alt="Logo" class="logo">
-        <h1>Die Spieltagskader</h1>
-        <h2>Hier kannst du deine Kader eintragen und speichern</h2>
-    </header>
+    <div class="logo-container">
+        <img src="1.png" alt="Bundesliga Manager Logo">
+        <div class="title">Bundesliga Manager</div>
+        <div class="subtitle">Fairness. Spaß. Wettkampf.</div>
+    </div>
 
     <div class="kader-entry">
         <h3>Startelfspieler (11 Spieler)</h3>
