--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -56,9 +56,11 @@
     </style>
 </head>
 <body>
-    <img src="path/to/your/logo.png" alt="Bundesliga Manager Logo" class="logo">
-    <h1>Bundesliga Manager</h1>
-    <h2>Fairness. Spaß. Wettkampf.</h2>
+     <div class="logo-container">
+        <img src="1.png" alt="Bundesliga Manager Logo">
+        <div class="title">Bundesliga Manager</div>
+        <div class="subtitle">Fairness. Spaß. Wettkampf.</div>
+    </div>
 
     <input type="text" id="managerName" placeholder="Dein Name" style="width: calc(100% - 10px);">
 
