--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -55,6 +55,10 @@
         }
     </style>
 </head>
+<body>
+    <img src="path/to/your/logo.png" alt="Bundesliga Manager Logo" class="logo">
+    <h1>Bundesliga Manager</h1>
+    <h2>Fairness. Spaß. Wettkampf.</h2>
 
     <input type="text" id="managerName" placeholder="Dein Name" style="width: calc(100% - 10px);">
 
