--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -56,7 +56,7 @@
     </style>
 </head>
 <body>
-    <img src="path/to/your/logo.png" alt="Bundesliga Manager Logo" class="logo">
+    <img src="1.png" alt="Bundesliga Manager Logo" alt="Bundesliga Manager Logo" class="logo">
     <h1>Bundesliga Manager</h1>
     <h2>Fairness. Spaß. Wettkampf.</h2>
 
