--- a/spieltagskader.html
+++ b/spieltagskader.html
@@ -17,8 +17,17 @@
             margin: 0 auto;
             max-width: 100%;
         }
-        h1, h2 {
+        h1 {
             text-align: center;
+            font-size: 2.5em;
+            color: #333;
+            font-weight: bold;
+        }
+        h2 {
+            text-align: center;
+            front-size: 1.2em;
+            color: #555;
+            margin-top: 15px;
         }
         input[type="text"] {
             width: calc(25% - 10px);
