--- a/index.html
+++ b/index.html
@@ -70,9 +70,14 @@
         .button-container {
             margin-top: 10px;
         }
-        .button-container button:disabled {
+         .button-container button:disabled {
             background-color: #ccc;
             cursor: not-allowed;
+        }
+         .button-container button:not(:disabled) {
+            background-color: #4CAF50;
+            color: white;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -100,8 +105,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
-                    <td contenteditable="false">Bent</td>
+                    <td contenteditable="false">1.</td>
+                    <td contenteditable="true">Bent</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
@@ -110,8 +115,8 @@
                     <td contenteditable="true">0</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td contenteditable="false">Leon I.</td>
+                    <td contenteditable="false">2.</td>
+                    <td contenteditable="true">Leon I.</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
@@ -120,8 +125,8 @@
                     <td contenteditable="true">0</td>
                 </tr>
                 <tr>
-                    <td>3</td>
-                    <td contenteditable="false">Leon B.</td>
+                    <td contenteditable="false">3.</td>
+                    <td contenteditable="true">Leon B.</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
@@ -130,8 +135,8 @@
                     <td contenteditable="true">0</td>
                 </tr>
                 <tr>
-                    <td>4</td>
-                    <td contenteditable="false">Moritz</td>
+                    <td contenteditable="false">4.</td>
+                    <td contenteditable="true">Moritz</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
@@ -140,8 +145,8 @@
                     <td contenteditable="true">0</td>
                 </tr>
                 <tr>
-                    <td>5</td>
-                    <td contenteditable="false">Jonas</td>
+                    <td contenteditable="false">5.</td>
+                    <td contenteditable="true">Jonas</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
@@ -149,8 +154,13 @@
                     <td contenteditable="true">0</td>
                     <td contenteditable="true">0</td>
                 </tr>
-            </tbody>
+              </tbody>
         </table>
+        <div class="button-container">
+            <button onclick="editTable('main-table')">Bearbeiten</button>
+            <button onclick="saveTable('main-table')" disabled>Speichern</button>
+            <button onclick="cancelEdit('main-table')" disabled>Abbrechen</button>
+        </div>
     </div>
 
     <h2>Die Kader</h2>
